@@ -1,4 +1,4 @@
-Phoronix Test Suite 5.0.0m1
+Phoronix Test Suite 5.0.0m2
 http://www.phoronix-test-suite.com/
 #####################################
 
