@@ -334,6 +334,13 @@ class pts_websocket_display_mode implements pts_display_mode_interface
 		$j['pts']['msg']['test_run_total'] = $this->expected_trial_run_count;
 		$j['pts']['msg']['test_run_estimated_time'] = $test_result->test_profile->get_estimated_run_time();
 
+		if($j['pts']['msg']['test_run_pos'] > $j['pts']['msg']['test_run_total'])
+		{
+			// Don't let the run_pos go over run_total so instead dynamically increase run total and try to roughly compensate for increased dynamic run count
+			$j['pts']['msg']['test_run_estimated_time'] = ($test_result->test_profile->get_estimated_run_time() / $j['pts']['msg']['test_run_total']) * ($j['pts']['msg']['test_run_pos'] + 2);
+			$j['pts']['msg']['test_run_total'] = $j['pts']['msg']['test_run_pos'] + 1;
+		}
+
 		// TOTAL QUEUE
 		$j['pts']['msg']['test_queue_pos'] = $test_run_manager->get_test_run_position();
 		$j['pts']['msg']['test_queue_total'] = $test_run_manager->get_test_run_count_reported();
