@@ -1,0 +1,2 @@
+<div style="text-align: center; margin: 20px;">
+<p style="text-align: justify; margin: 30px 40px 0;">The Phoronix Test Suite GUI settings area has yet to be implemented. For now you can edit all of your Phoronix Test Suite settings via the <em>~/.phoronix-test-suite/user-config.xml</em> configuration file.</p>
