@@ -21,6 +21,7 @@ for(var i = 0; i < tq.length; i++)
 <p>Test Name: <input type="text" size="30" id="pts_test_name" /></p>
 <p>Test Identifier: <input type="text" size="30" id="pts_test_identifier" /></p>
 <p>Test Description:<br /><textarea id="pts_test_description" rows="4" cols="50"></textarea></p>
+<p><em>With Phoronix Test Suite 5.0 your results will be automatically uploaded to <a href="http://openbenchmarking.org/">OpenBenchmarking.org</a> as we continue refining the features and new user-interface of PTS5 and complete a local results viewer interface. If you require behind-the-firewall or private testing support within the HTML5 UI, please contact us. The Phoronix Test Suite command-line interface will continue to operate as it always has been for either public or private testing.</em></p>
 </strong>
 <script type="text/javascript">
 document.write('<button type="button" onclick="javascript:send_benchmark_request(\'' + btoa(JSON.stringify(tq_json)) + '\');">Start Benchmarking</button>');
