@@ -1,8 +1,9 @@
 PHORONIX TEST SUITE CHANGE-LOG
 
-Phoronix Test Suite (Git)
+Phoronix Test Suite 5.0 Milestone 2
+17 February 2014
 
-- pts-core: Add rename-result-file option'
+- pts-core: Add rename-result-file option
 - pts-core: WebSocket bug-fixes
 - pts-core: Other bug-fixes
 - pts-core: Disable the compiler-mask by default on FreeBSD/PC-BSD due to potential test installation issues on 10.0-RELEASE
